# architectLLM

./: .env.example  .gitignore  pyproject.toml
.claude/: launch.json
config/: brand_blocklist.txt  domains.yaml  primitives.yaml  settings.yaml
config/prompts/: evol_instruct.txt  extract_primitives.txt  generate_analysis.txt  generate_response.txt  llm_judge.txt  multi_turn.txt  system_architect_persona.txt
docs/: index.html
docs/assets/: index-CwkwAlU7.js  index-p_NunJV8.css
nb/: gpt-oss-(20B)-Fine-tuning.ipynb
site/: index.html  package-lock.json  package.json  vite.config.js
site/src/: App.css  App.jsx
site/src/components/: Blog.jsx  Header.jsx  Overview.jsx  Tabs.jsx
site/src/posts/: fine-tuning.jsx  training-data.jsx
src/: cli.py
src/analysis/: coverage.py
src/common/: config.py  llm_client.py  models.py  storage.py
src/extraction/: discovery.py  extractor.py  pipeline.py
src/formatting/: composition.py  export.py  harmony.py
src/generation/: phase1_primitives.py  phase2_questions.py  phase3_responses.py  phase4_filtering.py  phase5_validation.py
website/: index.html
